# Tarefa-1---Aula-S-ncrona-27-01

./: 0a9.c  CMakeLists.txt  LICENSE  README.md  ws2812.c
